[project]
name = "v4t"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "hvac>=2.4.0",
    "textual>=6.8.0",
]


[build-system]
requires = ["setuptools", "wheel", "build"]
build-backend = "setuptools.build_meta"

[project.scripts]
v4t = "app:run"

[tool.setuptools]
packages = ["widgets", "utils"]

[tool.setuptools.package-data]
"*" = ["*.tcss"]


[project.optional-dependencies]
build = [
    "nuitka",
    "zstandard"
]
